--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/file-saver": "^2.0.7",
+    "@types/sql.js": "^1.4.9",
     "axios": "^1.6.2",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.20.1",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
+    "sql.js": "^1.12.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
