--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/sql.js": "^1.4.9",
     "axios": "^1.6.2",
+    "crypto-browserify": "^3.12.1",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "groq-sdk": "^0.9.1",
