--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   command = "CI=false npm run build"
   publish = "dist"
   base = "/"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ./"
 
 [build.environment]
   NODE_VERSION = "18"
