--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.16.12",
     "@mui/material": "^5.14.20",
+    "@mui/styled-engine-sc": "^6.4.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/file-saver": "^2.0.7",
@@ -37,9 +38,11 @@
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
     "sql.js": "^1.12.0",
+    "styled-components": "^6.1.14",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@emotion/babel-plugin": "^11.13.5",
     "@stackbit/types": "^2.1.9",
     "@types/bcrypt": "^5.0.2",
