--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,15 @@
   ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ./"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps --force"
   CI = "false"
   NETLIFY_USE_YARN = "false"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   for = "/*"
@@ -17,21 +22,12 @@
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
     Access-Control-Allow-Credentials = "true"
+    Cache-Control = "public, max-age=0, must-revalidate"
 
 [dev]
   command = "npm run dev"
   port = 3000
+  targetPort = 3000
   publish = "dist"
-  framework = "vite"
-
-[[redirects]]
-  from = "/api/*"
-  to = "https://api.groq.com/openai/v1/chat/completions/:splat"
-  status = 200
-  force = true
-  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Credentials = "true"}
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = true
+  autoLaunch = true
+  framework = "#custom"
