--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "preview": "vite preview",
     "start": "vite",
     "netlify-dev": "netlify dev",
-    "netlify-build": "npm run build"
+    "netlify-build": "CI=false npm run build"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.16.12",
-    "@mui/material": "^5.14.20",
-    "@mui/styled-engine-sc": "^6.4.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/file-saver": "^2.0.7",
@@ -33,37 +32,34 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
-    "react-redux": "^9.0.1",
-    "react-router-dom": "^6.20.1",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.3",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
     "sql.js": "^1.12.0",
-    "styled-components": "^6.1.14",
-    "zod": "^3.24.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@emotion/babel-plugin": "^11.13.5",
     "@stackbit/types": "^2.1.9",
     "@types/bcrypt": "^5.0.2",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.17.12",
+    "@types/node": "^20.11.5",
     "@types/pdfmake": "^0.2.11",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.5",
-    "@types/react-transition-group": "^4.4.12",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-transition-group": "^4.4.10",
     "@types/use-sync-external-store": "^0.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.53.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "netlify-cli": "^15.0.2",
-    "terser": "^5.37.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-node-polyfills": "^0.23.0"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "netlify-cli": "^17.13.1",
+    "terser": "^5.27.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
