--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-saver": "^2.0.5",
     "groq-sdk": "^0.9.0",
     "html-to-pdfmake": "^2.4.25",
+    "idb": "^8.0.1",
     "jspdf": "^2.5.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
