feat: update Vite configuration external dependencies including express and netlify blobs

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@netlify/blobs": "^8.1.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/express": "^5.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/sql.js": "^1.4.9",
     "axios": "^1.6.2",
     "crypto-browserify": "^3.12.1",
     "docx": "^8.5.0",
+    "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "groq-sdk": "^0.9.0",
     "html-to-pdfmake": "^2.4.25",
